--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,8 @@
 }
 
 [data-flux-label] {
-    @apply !mb-0 !leading-tight;
+    margin-bottom: 0 !important;
+    line-height: 1.25 !important;
 }
 
 input:focus[data-flux-control],
