replace outline-hidden utility

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,7 +14,8 @@
 input:focus[data-flux-control],
 textarea:focus[data-flux-control],
 select:focus[data-flux-control] {
-    @apply outline-hidden ring-2 ring-accent ring-offset-2 ring-offset-white;
+    outline: none;
+    @apply ring-2 ring-accent ring-offset-2 ring-offset-white;
 }
 
 /* \[:where(&)\]:size-4 {
